<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andylee.myapplication_bus_metro.fragment_metro"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/frag_metro"
    android:background="#7986cb"
    >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView_counting_auto"
        android:layout_width="158dp"
        android:layout_height="19dp"
        android:text="@string/Time_elapse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="11dp" />

    <info.hoang8f.android.segmented.SegmentedGroup
        tools:context="info.hoang8f.android.segmented.SampleActivity$PlaceholderFragment"
        android:id="@+id/segmented01"
        android:layout_width="345dp"
        android:layout_height="33dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        app:sc_border_width="1dp"
        app:sc_corner_radius="4dp"
        app:sc_tint_color="#66bb6a"
        android:layout_marginTop="12dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/radio_button_ios01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/brown" />

        <RadioButton
            android:id="@+id/radio_button_ios02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/red" />

        <RadioButton
            android:id="@+id/radio_button_ios03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/green" />

        <RadioButton
            android:id="@+id/radio_button_ios04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/orange" />

        <RadioButton
            android:id="@+id/radio_button_ios05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/blue" />

    </info.hoang8f.android.segmented.SegmentedGroup>

    <ProgressBar
        android:id="@+id/progressBar01"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressDrawable="@drawable/custom_progrssbar"
        android:layout_width="386dp"
        android:layout_height="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteY="506dp"
        tools:layout_editor_absoluteX="1dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <ListView
        android:id="@+id/listviewproduct"
        android:layout_width="360dp"
        android:layout_height="415dp"
        android:divider="#ff9100"
        android:dividerHeight="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segmented01"
        app:layout_constraintVertical_bias="0.0"
        android:layout_above="@+id/textView_counting_auto"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/segmented01" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@mipmap/ic_search_black_24dp"
        android:layout_alignTop="@+id/listviewproduct"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:text="@string/textView2"
        android:textSize="15dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
